--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,7 @@ language: ruby
 rvm:
   - 2.1.2
 before_install: gem install bundler -v 1.10.1
+install:
+  - bundle install --path vendor/bundle
+script:
+  - bundle exec rake spec
